--- a/main.css
+++ b/main.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Alegreya');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+
 * {
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
@@ -111,6 +114,7 @@ header .hero h1 {
     padding-top: 2em;
     font-size: 56px;
     font-weight: 300;
+    font-family: 'Open Sans', sans-serif;
 }
 
 header .hero h2 {
